# paper_fluctuating_environments_and_migration

./: .gitignore  README.md  project_style.mplstyle  pyproject.toml
code/random_growth_src/lib/: __init__.py  analytic_densities.py  empirical_densities.py  optimal_growth.py  simulations.py
code/random_growth_src/run_simulations/: make_numerical_phase_diagram.py
data/numerical_results/: numerical_phase_diagram_prominence_0.02.npz
notebooks/: figure_1.ipynb  figure_2.ipynb  figure_3.ipynb  figure_4.ipynb  figure_5.ipynb  long_correlation_time_approximation.nb  small_noise_approximation.nb  supplementary_figures.ipynb
