[project]
name = "random_growth_src"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "appnope==0.1.4",
  "asttokens==3.0.1",
  "comm==0.2.3",
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "debugpy==1.8.19",
  "decorator==5.2.1",
  "executing==2.2.1",
  "fonttools==4.61.1",
  "ipykernel==7.1.0",
  "ipython==9.9.0",
  "ipython-pygments-lexers==1.1.1",
  "jedi==0.19.2",
  "jupyter-client==8.8.0",
  "jupyter-core==5.9.1",
  "kiwisolver==1.4.9",
  "matplotlib==3.10.8",
  "matplotlib-inline==0.2.1",
  "mpmath==1.3.0",
  "nest-asyncio==1.6.0",
  "numpy==2.4.1",
  "packaging==26.0",
  "pandas==3.0.0",
  "parso==0.8.5",
  "pexpect==4.9.0",
  "pillow==12.1.0",
  "platformdirs==4.5.1",
  "prompt-toolkit==3.0.52",
  "psutil==7.2.2",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "pygments==2.19.2",
  "pyparsing==3.3.2",
  "python-dateutil==2.9.0.post0",
  "pyzmq==27.1.0",
  "scipy==1.17.0",
  "seaborn==0.13.2",
  "six==1.17.0",
  "stack-data==0.6.3",
  "tornado==6.5.4",
  "traitlets==5.14.3",
  "wcwidth==0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code/random_growth_src"]